# biofilm-segmentation-admm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
biofilm_admm/: admm_segmentation.py
notebooks/: biofilm_classifier_efficientnet.ipynb
src/: __init__.py  classifier.py  dataset.py
