[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biofilm_admm"
version = "0.1.0"
description = "Biofilm image segmentation using ADMM and classification using Keras/PyTorch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Runtime-Slayers" }
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "opencv-python",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "tqdm"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = ["E741"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
